--- a/templates/search.html
+++ b/templates/search.html
@@ -9,6 +9,10 @@
 <script src="{% static "js/search.js" %}"></script>
 {% endblock %}
 
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static "css/search.css" %}">
+{% endblock %}
+
 {% block content %}
 <h1>Recherche</h1>
 
@@ -33,7 +37,7 @@
     
     <div id="search-fields">
         <div>
-            <label for="level-min">Niveau</label> <input type="text" id="level-min" name="level-min" /> &agrave; <input type="text" id="level-max" name="level-max" /> 
+            <label for="level-min">Niveau</label> <input type="text" id="level-min" name="level-min" autocomplete="off" /> &agrave; <input type="text" id="level-max" name="level-max" autocomplete="off" /> 
         </div>
         
         <div>
@@ -62,8 +66,8 @@
                 case(s)
             </div>
             
-            <label for="cost-min">Co&ucirc;t en PA :</label> <input type="text" id="cost-min" name="cost-min" /> &agrave; <input type="text" id="cost-max" name="cost-max" />
-            <label for="range-min">Port&eacute;e :</label> <input type="text" id="range-min" name="range-min" /> &agrave; <input type="text" id="range-max" name="range-max" />
+            <label for="cost-min">Co&ucirc;t en PA :</label> <input type="text" id="cost-min" name="cost-min" autocomplete="off" /> &agrave; <input type="text" id="cost-max" name="cost-max" autocomplete="off" />
+            <label for="range-min">Port&eacute;e :</label> <input type="text" id="range-min" name="range-min" autocomplete="off" /> &agrave; <input type="text" id="range-max" name="range-max" autocomplete="off" />
         </div>
     </div>
     
@@ -93,8 +97,8 @@
             <option value="{{ attr.name }}">{{ attr.name }}</option>
         {% endfor %}
     </select>
-    <label>Min</label> <input type="text" class="value-min" name="value-min" />
-    <label>Max</label> <input type="text" class="value-max" name="value-max" />
+    <label>Min</label> <input type="text" class="value-min" name="value-min" autocomplete="off" />
+    <label>Max</label> <input type="text" class="value-max" name="value-max" autocomplete="off" />
     <input type="button" class="remove-row" value="-" />
 </div>
 
