--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="dofus,objets,recherche,wakfu,ankama,amakna,kamas,pa,pm,po" />
     <meta name="robots" content="noodp" />
     <meta name="rating" content="General" />
+    <meta name="author" content="Thierry Jacoel" />
     <meta http-equiv="content-language" content="fr-fr" />
     
     <meta property="og:site_name" content="Smetisufod" />
@@ -29,31 +30,29 @@
 </head>
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Smetisufod</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Search</a></li>
-                <li><a href="about">D&eacute;veloppeurs</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+<header>
+<a href="{% url "home" %}">Smetisufod</a>
+</header>
 
+<nav>
+    <ul>
+        <li class="{% if active_tab == "search" %}active{% endif %}"><a href="{% url "search" %}">Recherche</a></li>
+        <li class="{% if active_tab == "dev" %}active{% endif %}"><a href="{% url "dev" %}">Developpeurs</a></li>
+        <li class="{% if active_tab == "contact" %}active{% endif %}"><a href="{% url "contact" %}">Contact</a></li>
+    </ul>
+</nav>
 
+<main>
 {% block content %}{% endblock %}
+</main>
 
+<footer>
+Toutes les informations et images pr&eacute;sentes sur ce site sont la propri&eacute;t&eacute; de Ankama. <a href="http://www.ankama.com" target="_blank">Lien</a>
+</footer>
 
 <script src="{% static "js/jquery.1.11.0.min.js" %}"></script>
-<script src="{% static "js/bootstrap.min.js" %}"></script>
-
 {% block js %}{% endblock %}
 
-<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
 <link rel="stylesheet" type="text/css" href="{% static "css/base.css" %}">
 {% block css %}{% endblock %}
 
